--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN">
     <body>
-        <h1>Hello World!</h1>
-        <p>This is from a template</p>
+        <h1>welcome to my website</h1>
+        <p>This website is from one of the templates</p>
     </body>
 </html>
