--- a/Jinga/Jinga/templates/home.html
+++ b/Jinga/Jinga/templates/home.html
@@ -15,11 +15,11 @@
 <div class="container">
     <div class="status">
       {% if status.active %}
-        <p>Activated.</p>
+        <p>Activated</p>
       {% elif status.disabled %}
-        <p>Disabled.</p>
+        <p>Disable</p>
       {% else %}
-        <p>OH GOD WHAT IS THE STATUS?!</p>
+        <p>Can't Find the status</p>
       {% endif %}
     </div>
 </div>
