--- a/Jinga/Jinga/templates/layout.html
+++ b/Jinga/Jinga/templates/layout.html
@@ -4,7 +4,8 @@
   <head>
     <title>{{title}}</title>
     <meta charset="utf-8">
-    <meta name="description" content={{description}}>
+    
+    <meta name="Info" content={{Information}}>
     <link rel="shortcut icon" href="static/img/favicon.ico">
     {% block css %}{% endblock %}
   </head>
